tests/machine/x/kotlin/join_multi.error
line 70:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/join_multi.kt:70:19: error: type inference failed: Not enough information to infer parameter V in fun <K, V> mutableMapOf(vararg pairs: Pair<K, V>): MutableMap<K, V>
Please specify it explicitly.

        __res.add(mutableMapOf("name" to c.name, "sku" to i.sku))
                  ^
/workspace/mochi/tests/machine/x/kotlin/join_multi.kt:70:42: error: unresolved reference: c
        __res.add(mutableMapOf("name" to c.name, "sku" to i.sku))
                                         ^
/workspace/mochi/tests/machine/x/kotlin/join_multi.kt:70:59: error: unresolved reference: i
        __res.add(mutableMapOf("name" to c.name, "sku" to i.sku))
                                                          ^
/workspace/mochi/tests/machine/x/kotlin/join_multi.kt:78:26: error: unresolved reference: name
        println(listOf(r.name, "bought item", r.sku).joinToString(" "))
                         ^
/workspace/mochi/tests/machine/x/kotlin/join_multi.kt:78:49: error: unresolved reference: sku
        println(listOf(r.name, "bought item", r.sku).joinToString(" "))
                                                ^

 69:     for (o in orders) {
 70:         __res.add(mutableMapOf("name" to c.name, "sku" to i.sku))
 71:     }
